# LR-NewLesionsDetection

./: README.md
BrainTools_v2/: CMakeLists.txt  Observers.h  analysemain.cpp  atlasmain.cpp  brainio.cpp  brainio.h  brainpreprocessing.cpp  brainpreprocessing.h  brainregistration.cpp  brainregistration.h  brainsegmentation.cpp  brainsegmentation.h  coregmain.cpp  defomain.cpp  gaussianestimator.h  gaussianestimator1d.cpp  gaussianestimator1d.h  gaussianestimator2d.cpp  gaussianestimator2d.h  gaussianestimator3d.cpp  gaussianestimator3d.h  gaussianestimatornd.cpp  gaussianestimatornd.h  histogrammain.cpp  imagedefinitions.h  labelMain.cpp  labelmain.cpp  longitudinal_lesion_analysis.sh  postmain.cpp  premain.cpp  registrationlevelupdate.h  submain.cpp  testmain.cpp  tissuemain.cpp  voxelselectoinmain.cpp
LR-Model/: PredictLRModel.m  TrainLRModel.m  trainLRClassifier.m
